# forevd

./: Dockerfile  README.md  pyproject.toml  pytest-coverage.xml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  yaml.instructions.md
.github/workflows/: build.yml  docker.yml  pr.yml  publish.yml
etc/: httpd-include.conf  ldap.yaml  locations.yaml  oidc.yaml  ssl.yaml
forevd/: __main__.py  app.py
forevd/apache/: __init__.py  httpd.conf
forevd/resources/logging/: cli.conf
