[tool.poetry]
name = "forevd"
version = "0.1.5"
description = "Forward and reverse proxy using nginx or apache"
authors = ["Erick Bourgeois <erick@jeb.ca>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.2"
requests = "^2.28.1"
firestone-lib = "^0.1.8"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

[tool.poetry.group.build.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
pytest-mock = "^3.10.0"
mock = "^4.0.3"
pycodestyle = "^2.9.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
forevd = 'forevd.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 150
good-names = [
    "fh"
]
max-args = 8
disable = """
    logging-fstring-interpolation,
    fixme
"""
